# BLD-BackEnd

./: .env  README.md  db.sqlite3  manage.py  pyproject.toml  pyvenv.cfg
REST/: asgi.py  settings.py  urls.py  wsgi.py
Relations/: asgi.py  settings.py  urls.py  wsgi.py
Scripts/: activate  activate.bat  activate.fish  activate.nu
poetry_school/: db.sqlite3  pyproject.toml
poetry_school/Student/: admin.py  data.json  models.py  urls.py  views.py
poetry_school/Student/migrations/: 0001_initial.py  0002_rename_fisrt_name_student_first_name.py
poetry_school/school/: settings.py  urls.py
school/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
school/migrations/: 0001_initial.py  0002_remove_student_subjects_delete_subject.py  0002_subject_student_subjects.py  0003_remove_student_age must be greater than 5.py  0003_student_age must be greater than 5.py  0004_remove_student_mark must be greater than 0.py  0004_student_mark must be greater than 0.py  0005_alter_student_parent.py
